--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ codegen-gui/codegen.log
 codegen-gui/target/
 codegen-maven-plugin/target/
 codegen-maven-plugin/.settings/org.jboss.ide.eclipse.as.core.prefs
+codegen-example-project/codegenOut2/
