--- a/codegen-gui/pom.xml
+++ b/codegen-gui/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>de.chrlembeck.codegen</groupId>
-            <artifactId>antlr-gui</artifactId>
+            <artifactId>antlr-editorkit</artifactId>
         </dependency>
         <dependency>
             <groupId>de.chrlembeck.codegen</groupId>
