--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ codegen-maven-plugin/target/
 codegen-maven-plugin/.settings/org.jboss.ide.eclipse.as.core.prefs
 codegen-example-project/codegenOut2/
 antlr-editorkit/target/
+target/javadoc-bundle-options/javadoc-options-javadoc-resources.xml
+target/
