--- a/codegen-modeller/pom.xml
+++ b/codegen-modeller/pom.xml
@@ -8,13 +8,18 @@
         <relativePath>../codegen-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>antlr-editorkit</artifactId>
-    <name>ANTLR EditorKit</name>
+    <artifactId>codegen-modeller</artifactId>
+    <name>Codegen Modell Editor</name>
 
     <dependencies>
         <dependency>
-            <groupId>org.antlr</groupId>
-            <artifactId>antlr4-runtime</artifactId>
+            <groupId>de.chrlembeck.codegen</groupId>
+            <artifactId>codegen-generator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>sqljdbc4</artifactId>
+            <version>4.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
