--- a/codegen-modeller/pom.xml
+++ b/codegen-modeller/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>codegen-generator</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.swinglabs</groupId>
+            <artifactId>swingx</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>sqljdbc4</artifactId>
             <version>4.0</version>
