Gui um Platzhalter zur Darstellung der Modelle erweitert

--- a/codegen-gui/pom.xml
+++ b/codegen-gui/pom.xml
@@ -21,6 +21,10 @@
             <artifactId>codegen-generator</artifactId>
         </dependency>
         <dependency>
+            <groupId>de.chrlembeck.codegen</groupId>
+            <artifactId>codegen-modeller</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4-runtime</artifactId>
         </dependency>
