--- a/codegen-parent/pom.xml
+++ b/codegen-parent/pom.xml
@@ -100,6 +100,8 @@
                 <artifactId>maven-pmd-plugin</artifactId>
                 <version>3.8</version>
                 <configuration>
+                    <verbose>true</verbose>
+                    <failurePriority>2</failurePriority>
                     <excludes>
                         <exclude>**/generated/*.java</exclude>
                     </excludes>
