--- a/pom.xml
+++ b/pom.xml
@@ -23,4 +23,21 @@
         <module>codegen-example-model</module>
         <module>codegen-example-project</module>
     </modules>
+    <build>
+    <plugins>
+      <plugin>
+        <groupId>org.openclover</groupId>
+        <artifactId>clover-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>pre-site</phase>
+            <goals>
+              <goal>instrument</goal>
+              <goal>aggregate</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
