Behavior of the generator in case of overwriting existing files is now manageable

--- a/codegen-parent/pom.xml
+++ b/codegen-parent/pom.xml
@@ -217,6 +217,7 @@
                     <charset>UTF-8</charset>
                     <generateHtml>true</generateHtml>
                     <generatePdf>true</generatePdf>
+                    <generateHistorical>false</generateHistorical>
                 </configuration>
             </plugin>
         </plugins>
